<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_credit_page"
    tools:context=".view.InfoCreditPage"
    android:background="#F4F4F3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageButton
                android:id="@+id/back_image_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:background="@color/yellow_4"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:id="@+id/info_page_text_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat"
                android:text="Информация"
                android:textAlignment="center"
                android:textColor="@color/black"

                android:textSize="17sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/contacts_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/contacts"
                    android:textAlignment="center"
                    android:textColor="@color/pink_3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckedTextView
                    android:id="@+id/contacts_checked_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/montserrat"
                    android:text="\nПаспорт гражданина Украины\nИНН\nВозраст: старше 18 лет\nКарта любого банка Украины\n"
                    android:textAlignment="textStart"
                    android:textColor="@color/green_3"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/license_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/license"
                    android:textAlignment="center"
                    android:textColor="@color/pink_3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckedTextView
                    android:id="@+id/license_checked_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/montserrat"
                    android:text="\nМинимальный срок кредитования: 61 дней\nМаксимальный срок кредитования: 365 день\nМинимальная ставка за пользование кредитом: 0.1% в день\nМаксимальная ставка за пользование кредитом: 1% в день\nМаксимальная годовая процентная ставка (APR): 365%\nШтраф за просрочку: 0.10% в день\nДругие комиссии или сборы: отсутствуют
                    \n"
                    android:textAlignment="textStart"
                    android:textColor="@color/green_3"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/term_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textColor="@color/pink_3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckedTextView
                    android:id="@+id/term_checked_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/montserrat"
                    android:text="\nСумма и срок займа: 12000 гривен на 149 дней\nКомиссия за пользование кредитом: 1% в день (120 гривен/день)\nОбщая сумма комиссии: 17880 гривен\nОбщая сумма к возврату с учетом суммы займа: 29880 гривен\nПСК (полная стоимость кредита) в процентах составляет 149% годовых\n"
                    android:textAlignment="textStart"
                    android:textColor="@color/green_3"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/annual_percentage_rate_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/annual_percentage_rate"
                    android:textAlignment="center"
                    android:textColor="@color/pink_3"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <CheckedTextView
                    android:id="@+id/annual_percentage_rate_checked_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/montserrat"
                    android:text="\nЗаемщик имеет право на продление срока оплаты по кредиту.\nПри этом необходимо оплатить только проценты за пользование\nсредствами.\n"
                    android:textAlignment="textStart"
                    android:textColor="@color/green_3"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/link_footer_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:autoLink="web"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/terms_of_use"
                    android:textAlignment="center"
                    android:textColor="@color/yellow_3"
                    android:textSize="10sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>